# routes/web.php
@@ -3,5 +3,13 @@
 use Illuminate\Support\Facades\Route;
 
 Route::get('/', function () {
-    return view('welcome');
-});
+    return view('pages.home');
+})->name('home');
+
+Route::get('/book', function () {
+    return view('pages.plp');
+})->name('plp');
+
+Route::get('/book/{i}', function () {
+    return view('pages.pdp');
+})->name('pdp');
